# Geospatial-Forecasting

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  pyproject.toml  requirements.txt
configs/: api.yaml  backend.yaml  base.yaml  convlstm_training.yaml  grid.yaml  inference.yaml  openremote.yaml  scenario.yaml
docs/: api-contract.md  architecture.md  frontend-spec.md  openremote_schema_mapping.md  optional_features_audit.md  service_modes.md
frontend/: .env.local  index.html  package-lock.json  package.json  tsconfig.json
scripts/: export_geojson.py  run_control_service.py  run_demo_forecast.py  run_execution_worker.py  run_forecast_worker.py  run_local_inference.py  run_local_stack.py  run_retraining_worker.py  seed_demo_data.py  start_dev.py
tests/: conftest.py  fakes_openremote_sink.py  test_api_endpoints.py  test_backend_registry.py  test_backends.py  test_baseline.py  test_config_loading.py  test_convlstm_backend.py  test_convlstm_contract.py  test_convlstm_input_adapter.py  test_convlstm_operational_layer.py  test_convlstm_outward_compatibility.py  test_convlstm_training.py  test_csv_state_store.py  test_decision_support_api.py  test_forecast_job_store.py  test_forecast_store.py  test_forecast_worker.py  test_frontend_api_base_url_config.py  test_llm_config_wiring.py  test_local_stack_launcher.py  test_model_candidate_context.py  test_observation_service.py  test_online_api_endpoints.py  test_online_forecast_service.py  test_openremote_demo_modes.py  test_openremote_forecast_asset_contract.py  test_openremote_http_sink.py  (+18 more)
(+229 files in other folders)
