[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geospatial-forecasting"
version = "0.1.0"
description = "Early proof-of-concept geospatial forecasting baseline for airborne hazard dispersion."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "huggingface_hub>=0.27,<1.0",
  "matplotlib>=3.8,<4.0",
  "numpy>=1.26,<3.0",
  "openai>=1.30,<2.0",
  "pyproj>=3.6,<4.0",
  "PyYAML>=6.0,<7.0",
  "fastapi>=0.111,<1.0",
  "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
